Adding titles and descriptions to pages

--- a/src/company/index.html
+++ b/src/company/index.html
@@ -1,6 +1,7 @@
 ---
 layout: company/company
-title: "Company"
+title: "Company Profile"
+excerpt: "Company profile of Astir Vitogiannis Bros SA, leaders in crown cork manufacturing"
 lang: en
 ref: company
 lang: en
