--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -1,7 +1,7 @@
 ---
 layout: contact/contact
 title: "Contact"
-excerpt: "kladlask daslkd  dsakldkas d"
+excerpt: "Contact Astir Vitogiannis Bros SA for information on crown corks manufacturing and other services."
 ref: contact
 lang: en
 googleAPIkey: AIzaSyBHsoG2Svv9u4myHjL7puWFVFTxLe7x5QI
