--- a/src/crown-corks/index.html
+++ b/src/crown-corks/index.html
@@ -1,6 +1,7 @@
 ---
 layout: crown-corks/crown-corks
 title: "Crown Corks"
+excerpt: "Products with various applications produced by Astir Vitogiannis Bros SA."
 ref: crown-corks
 lang: en
 bodyClass: 'crown-corks-section'
