--- a/src/facilities/index.html
+++ b/src/facilities/index.html
@@ -1,7 +1,7 @@
 ---
 layout: facilities/facilities
 title: "Facilities"
-excerpt: "kladlask daslkd  dsakldkas d"
+excerpt: "Facilities of Astir Vitogiannis SA. Privately owned facilities of the highest standard."
 ref: facility
 lang: en
 ---
