--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home/home
-title: "Homepage"
-excerpt: "kladlask daslkd  dsakldkas d"
+title: "Crown Corks Manufacturer, Supplier and Producer"
+excerpt: "Crown corks manufacturer, supplier and producer with 3 generations of history in the bottling industry and metal packaging sector."
 ref: home
 lang: en
 ---
