--- a/src/logistics/index.html
+++ b/src/logistics/index.html
@@ -1,7 +1,7 @@
 ---
 layout: logistics/logistics
 title: "Logistics"
-excerpt: "kladlask daslkd  dsakldkas d"
+excerpt: "Astir strives in removing uncertainties from any client’s supply chain."
 ref: logistics
 lang: en
 ---
