--- a/src/why-crown-corks/index.html
+++ b/src/why-crown-corks/index.html
@@ -1,6 +1,7 @@
 ---
 layout: why-crown-corks/why-crown-corks
 title: "Why Crown Corks"
+excerpt: "Products with various applications produced by Astir Vitogiannis Bros SA."
 ref: why-crown-corks
 lang: en
 ---
