--- a/src/cookie-use/index.html
+++ b/src/cookie-use/index.html
@@ -1,10 +1,9 @@
 ---
-layout: cookie-policy/cookie-policy
+layout: cookie-use/cookie-use
 title: "Cookie Use"
 excerpt: "Cookie Use of Astir Vitogiannis Bros SA"
 lang: en
-ref: cookie-use
-lang: en
+ref: cookieuse
 bodyClass: 'simple-page'
 ---
 
