--- a/src/privacy-policy/index.html
+++ b/src/privacy-policy/index.html
@@ -3,8 +3,7 @@ layout: privacy-policy/privacy-policy
 title: "Privacy Policy"
 excerpt: "Privacy policy of Astir Vitogiannis Bros SA"
 lang: en
-ref: privacy-policy
-lang: en
+ref: privacypolicy
 bodyClass: 'simple-page'
 ---
 
