updating cookie ref

--- a/src/cookie-use/index.html
+++ b/src/cookie-use/index.html
@@ -3,7 +3,7 @@ layout: cookie-use/cookie-use
 title: "Cookie Use"
 excerpt: "Cookie Use of Astir Vitogiannis Bros SA"
 lang: en
-ref: cookieuse
+ref: cookie-use
 bodyClass: 'simple-page'
 ---
 
